[gd_scene load_steps=3 format=3 uid="uid://scwo2aaj8f3a"]

[ext_resource type="Script" uid="uid://csxg8mfbvgxhc" path="res://scenes/ui/game_over.gd" id="1_arslm"]
[ext_resource type="AudioStream" uid="uid://dqf4styybksmx" path="res://assets/sound/sfx/basic_button_sound.mp3" id="2_uw87f"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_arslm")

[node name="Panel" type="Panel" parent="."]
offset_left = -18.0
offset_top = -19.0
offset_right = 1920.0
offset_bottom = 1072.0

[node name="Label" type="Label" parent="."]
offset_left = 563.0
offset_top = 194.0
offset_right = 1277.0
offset_bottom = 453.0
theme_override_font_sizes/font_size = 81
text = "GAME OVER
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="."]
offset_left = 717.0
offset_top = 433.0
offset_right = 1131.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 45
text = "Play Again"

[node name="Quit" type="Button" parent="."]
offset_left = 717.0
offset_top = 543.0
offset_right = 1131.0
offset_bottom = 631.0
theme_override_font_sizes/font_size = 51
text = "Quit
"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uw87f")

[connection signal="button_down" from="PlayAgain" to="." method="_on_play_again_button_down"]
[connection signal="button_up" from="PlayAgain" to="." method="_on_play_again_button_up"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
